finish initial module

--- a/experiments/choose_template-Copy11.ipynb
+++ b/experiments/choose_template-Copy11.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee142d0f-232d-4322-a775-128a06658911",
+   "id": "7a8f1ed1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0c78cb8d-24b7-4a5a-a392-0e1d9bb51435",
+   "id": "d08bc324",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_folder = Path('2_CPP_Page2/templates/16')\n",
+    "template_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/template_matching_opencv/templates/page_1/6')\n",
     "listTemplate = []\n",
     "for tem_path in template_folder.glob('*.jpg'):\n",
     "    image = cv2.imread(str(tem_path))\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7ac17a23-f2ea-4869-8052-a277e9010a88",
+   "id": "7e186739",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,83 +65,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5304857e-62d4-44ed-b36b-f312d79f8e7c",
+   "execution_count": 4,
+   "id": "6b1fd61f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('10. NN-35654-page3.jpg', 59)\n",
-      "('32NN-34895-page5.jpg', 65)\n",
-      "('35.NN-34242-page2.jpg', 79)\n",
-      "('35.NN-34242-page2.jpg', 79)\n",
-      "('35.NN-34242-page2.jpg', 79)\n",
-      "('35.NN-34242-page2.jpg', 79)\n",
-      "('35.NN-34242-page2.jpg', 79)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n",
-      "('33195-page2.jpg', 83)\n"
+      "('33020-page1.jpg', 37)\n",
+      "('33020-page1.jpg', 37)\n",
+      "('1. NN-34241-page1.jpg', 48)\n",
+      "('1. NN-34241-page1.jpg', 48)\n",
+      "('1. NN-34241-page1.jpg', 48)\n",
+      "('1. NN-34241-page1.jpg', 48)\n",
+      "('1. NN-34241-page1.jpg', 48)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 60)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n",
+      "('33060-page1.jpg', 79)\n"
      ]
     }
    ],
    "source": [
-    "img_folder = Path('2_CPP_Page2/samples')\n",
+    "img_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/GD2/1. CPP/85_Switzerland_equal/total/1_CPP_Page1')\n",
     "\n",
     "bestTemplate = None\n",
     "for template in listTemplate:\n",
@@ -157,7 +179,7 @@
     "        with open(json_pth) as json_file:\n",
     "            json_data = json.load(json_file)\n",
     "            for shape in json_data['shapes']:\n",
-    "                if shape['label'] == '16':\n",
+    "                if shape['label'] == '6':\n",
     "                    points = np.asarray(shape['points'], dtype=int)\n",
     "                    x1, y1 = points.min(axis=0)\n",
     "                    x2, y2 = points.max(axis=0)\n",
@@ -173,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "725cbb5d-d4b4-4cad-9281-e2f708d469c5",
+   "id": "1a6507f7",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e3382cb2-1fed-40b0-ada8-9603614f09eb",
+   "id": "13926f9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b459061f-69b8-4aca-bdc6-1bad61d71fcf",
+   "id": "f490b8b7",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf7259d-0349-4fc9-b766-04a96211e811",
+   "id": "fd8545bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -244,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
