--- a/experiments/choose_template-Copy14.ipynb
+++ b/experiments/choose_template-Copy14.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "ee142d0f-232d-4322-a775-128a06658911",
+   "execution_count": 1,
+   "id": "60941030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "0c78cb8d-24b7-4a5a-a392-0e1d9bb51435",
+   "execution_count": 2,
+   "id": "e71b31b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_folder = Path('2_CPP_Page2/templates/9')\n",
+    "template_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/template_matching_opencv/templates/page_1/26')\n",
     "listTemplate = []\n",
     "for tem_path in template_folder.glob('*.jpg'):\n",
     "    image = cv2.imread(str(tem_path))\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "7ac17a23-f2ea-4869-8052-a277e9010a88",
+   "execution_count": 3,
+   "id": "8d0a62be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,103 +65,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "5304857e-62d4-44ed-b36b-f312d79f8e7c",
+   "execution_count": 4,
+   "id": "7c881707",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('10. NN-35654-page3.jpg', 34)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('35.NN-34242-page2.jpg', 52)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n",
-      "('6. NN-33196-page2.jpg', 59)\n"
+      "('33020-page1.jpg', 34)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('37.NN-33234-page1.jpg', 49)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 54)\n",
+      "('14.NN- 30849 BS0 CPP-page1.jpg', 54)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('16. NN- 32542 G CPP (2)-page1.jpg', 55)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n",
+      "('33060-page1.jpg', 73)\n"
      ]
     }
    ],
    "source": [
-    "img_folder = Path('2_CPP_Page2/samples')\n",
+    "img_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/GD2/1. CPP/85_Switzerland_equal/total/1_CPP_Page1')\n",
     "\n",
     "bestTemplate = None\n",
     "for template in listTemplate:\n",
@@ -177,7 +176,7 @@
     "        with open(json_pth) as json_file:\n",
     "            json_data = json.load(json_file)\n",
     "            for shape in json_data['shapes']:\n",
-    "                if shape['label'] == '9':\n",
+    "                if shape['label'] == '26':\n",
     "                    points = np.asarray(shape['points'], dtype=int)\n",
     "                    x1, y1 = points.min(axis=0)\n",
     "                    x2, y2 = points.max(axis=0)\n",
@@ -193,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "725cbb5d-d4b4-4cad-9281-e2f708d469c5",
+   "id": "99390c4b",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e3382cb2-1fed-40b0-ada8-9603614f09eb",
+   "id": "c947ade9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b459061f-69b8-4aca-bdc6-1bad61d71fcf",
+   "id": "80f47bd1",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf7259d-0349-4fc9-b766-04a96211e811",
+   "id": "28430db2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -264,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
