--- a/experiments/choose_template-Copy8.ipynb
+++ b/experiments/choose_template-Copy8.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ee142d0f-232d-4322-a775-128a06658911",
+   "execution_count": 6,
+   "id": "ac65cf1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0c78cb8d-24b7-4a5a-a392-0e1d9bb51435",
+   "execution_count": 7,
+   "id": "245962d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_folder = Path('2_CPP_Page2/templates/12')\n",
+    "template_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/template_matching_opencv/templates/page_1/1')\n",
     "listTemplate = []\n",
     "for tem_path in template_folder.glob('*.jpg'):\n",
     "    image = cv2.imread(str(tem_path))\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "7ac17a23-f2ea-4869-8052-a277e9010a88",
+   "execution_count": 8,
+   "id": "3ac48f32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,86 +65,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5304857e-62d4-44ed-b36b-f312d79f8e7c",
+   "execution_count": 9,
+   "id": "a6e9774f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('10. NN-35654-page3.jpg', 34)\n",
-      "('32NN-34895-page5.jpg', 36)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('35.NN-34242-page2.jpg', 54)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n",
-      "('14.NN- 30849 BS0 CPP-page2.jpg', 64)\n"
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n",
+      "('33020-page1.jpg', 86)\n"
      ]
     }
    ],
    "source": [
-    "img_folder = Path('2_CPP_Page2/samples')\n",
+    "img_folder = Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/GD2/1. CPP/85_Switzerland_equal/total/1_CPP_Page1')\n",
     "\n",
     "bestTemplate = None\n",
     "for template in listTemplate:\n",
@@ -160,7 +179,7 @@
     "        with open(json_pth) as json_file:\n",
     "            json_data = json.load(json_file)\n",
     "            for shape in json_data['shapes']:\n",
-    "                if shape['label'] == '12':\n",
+    "                if shape['label'] == '1':\n",
     "                    points = np.asarray(shape['points'], dtype=int)\n",
     "                    x1, y1 = points.min(axis=0)\n",
     "                    x2, y2 = points.max(axis=0)\n",
@@ -176,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "725cbb5d-d4b4-4cad-9281-e2f708d469c5",
+   "id": "8c57806e",
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "e3382cb2-1fed-40b0-ada8-9603614f09eb",
+   "id": "b2d0dfe0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "b459061f-69b8-4aca-bdc6-1bad61d71fcf",
+   "id": "59ada066",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf7259d-0349-4fc9-b766-04a96211e811",
+   "id": "02798707",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -247,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
