--- a/experiments/create_template.ipynb
+++ b/experiments/create_template.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "included-antigua",
+   "execution_count": 20,
+   "id": "5ac0c744",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "\n",
-    "for img_pth in Path('/home/huynhtruc0309/Desktop/TEMPLATE_MATCHING/total/2_CPP_Page2/samples').glob('*.jpg'):\n",
+    "output_dir = '/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/template_matching_opencv/templates/page_3'\n",
+    "for img_pth in Path('/media/huynhtruc0309/DATA/vtcc/SUBTASK/TEMPLATE_MATCHING/GD2/1. CPP/85_Switzerland_equal/total/3_CPP_Date').glob('**/*.jpg'):\n",
     "    json_pth = str(img_pth).replace('.jpg', '.json')\n",
     "    if Path(json_pth).is_file():\n",
     "        # read img\n",
@@ -22,11 +23,12 @@
     "        with open(json_pth) as json_file:\n",
     "            data = json.load(json_file)\n",
     "            for shape in data['shapes']:\n",
-    "                if shape['label'] == '16':\n",
+    "                if shape['label'] == '5':\n",
     "                    # create output dir\n",
-    "                    out_dir = Path(img_pth.parents[1], 'templates', shape['label'])\n",
+    "                    out_dir = Path(output_dir, shape['label'])\n",
     "                    out_dir.mkdir(parents=True, exist_ok=True)\n",
     "                    out_img_pth = Path(out_dir, img_pth.name)\n",
+    "#                     print(out_img_pth)\n",
     "                    # read rect points\n",
     "                    points = np.asarray(shape['points'], dtype=int)\n",
     "                    x1, y1 = points.min(axis=0)\n",
@@ -37,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "governmental-wallpaper",
+   "id": "55527f2f",
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "young-woman",
+   "id": "c6813211",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
